# basic-mcp-setup

./: .gitignore  README.md  contents.py  main.py  mcp_server.py  pyproject.toml
src/basic_mcp_setup/: __init__.py
