[project]
name = "basic-mcp-setup"
version = "0.1.0"
description = "This is the basic project that I am building to learn model context protocol"
readme = "README.md"
authors = [
    { name = "Aditya (Aydie)", email = "developer@aydie.in" }
]
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.31.0",
    "mcp>=1.13.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
